# DeckOS_ESP32

./: CMakeLists.txt  LICENSE  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c
main/commands/: cmd_imu.c  cmd_ota.c  commands.c  dashboard.c  dashboard.h
main/communication/: bt.c  bt.h  bt_stubs.c  swarm.c  swarm.h  uart_detect.c  uart_pass.c  wifi.c  wifi.h
main/drivers/: drivers.c  mpu6050.c  nrf24l01.c  oled.c  spi_bus.c
main/drivers/camera/: camera_esp32.c  camera_esp32.h  camera_stubs.c
main/hal/: hal.h  hal_adc.c  hal_board.c  hal_flash.c  hal_gpio.c  hal_i2c.c  hal_pwm.c  hal_spi.c  hal_system.c  hal_timer.c  hal_uart.c
main/hardware/: servo.c
main/include/: autorun_script.h  bench.h  bg_job.h  board_detect.h  bootloader.h  commands.h  config.h  device_detect.h  drivers.h  dscript.h  editor.h  file_persist.h  gpio_mon.h  heap_track.h  kernel.h  led.h  module.h  morse.h  mpu6050.h  nrf24l01.h  oled.h  oled_console.h  print_lock.h  scheduler.h  servo.h  shell.h  spi_bus.h  syslog.h  tone.h  uart_detect.h  uart_pass.h  vault_data.h  vfs.h
main/kernel/: bg_job.c  bootloader.c  config.c  file_persist.c  gpio_mon.c  kernel.c  module.c  morse.c  scheduler.c  syslog.c  tone.c  vfs.c
main/modules/: mod_bt.c  mod_camera.c  mod_imu.c  mod_morse.c  mod_nrf24.c  mod_oled.c  mod_servo.c  mod_swarm.c  mod_tone.c  mod_wifi.c  plugin_example.c
main/scripting/: dscript.c  dscript_builtin.c  dscript_core.c  dscript_expr.c  dscript_flow.c  dscript_internal.h  dscript_vars.c
main/shell/: editor.c  shell.c
main/system/: bench.c  board_detect.c  device_detect.c  heap_track.c  oled_console.c  print_lock.c
