idf_component_register(
    SRCS
        main.c
        kernel/kernel.c
        kernel/scheduler.c
        kernel/syslog.c
        kernel/config.c
        kernel/vfs.c
        kernel/bg_job.c
        kernel/module.c
        kernel/bootloader.c
        kernel/gpio_mon.c
        kernel/file_persist.c
        kernel/morse.c
        kernel/tone.c
        shell/shell.c
        shell/editor.c
        commands/commands.c
        commands/cmd_imu.c
        commands/cmd_ota.c
        commands/dashboard.c
        scripting/dscript_core.c
        scripting/dscript_vars.c
        scripting/dscript_expr.c
        scripting/dscript_builtin.c
        scripting/dscript_flow.c
        system/board_detect.c
        system/device_detect.c
        system/print_lock.c
        system/heap_track.c
        system/bench.c
        system/oled_console.c
        hal/hal_gpio.c
        hal/hal_adc.c
        hal/hal_i2c.c
        hal/hal_spi.c
        hal/hal_pwm.c
        hal/hal_uart.c
        hal/hal_timer.c
        hal/hal_flash.c
        hal/hal_board.c
        hal/hal_system.c
        drivers/spi_bus.c
        drivers/drivers.c
        drivers/mpu6050.c
        drivers/oled.c
        drivers/nrf24l01.c
        drivers/camera/camera_esp32.c
        communication/wifi.c
        communication/swarm.c
        communication/bt_stubs.c
        communication/uart_pass.c
        communication/uart_detect.c
        hardware/servo.c
        modules/mod_wifi.c
        modules/mod_bt.c
        modules/mod_servo.c
        modules/mod_oled.c
        modules/mod_swarm.c
        modules/mod_nrf24.c
        modules/mod_camera.c
        modules/mod_imu.c
        modules/mod_tone.c
        modules/mod_morse.c
        modules/plugin_example.c
    INCLUDE_DIRS
        include
        hal
        drivers/camera
        communication
    REQUIRES
        efuse
        esp_timer
        esp_system
        esp_event
        esp_wifi
        nvs_flash
        spi_flash
        fatfs
        driver
        freertos
        newlib
        cxx
        esp_common
        esp_rom
        esptool_py
        lwip
        app_update
        mbedtls
        spiffs
        esp_adc
        esp_http_server
        esp32-camera
)
